feat: Add feature scaling for improved model performance

--- a/code.ipynb
+++ b/code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.datasets import load_breast_cancer"
+    "from sklearn.datasets import load_breast_cancer\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score"
    ]
   },
   {
@@ -1436,6 +1440,141 @@
    "source": [
     "y = cancer_df['target']\n",
     "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(455, 30)\n",
+      "(114, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Scaling\n",
+    "\n",
+    "`Converting different units and magnitude data in one unit.`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sc = sc.fit_transform(X_train)\n",
+    "X_test_sc = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.25014735, -0.76796585, -0.31169473, ..., -1.36032957,\n",
+       "        -0.38766321,  0.02350022],\n",
+       "       [-0.7831845 , -0.35579205, -0.79945921, ..., -0.38997167,\n",
+       "         0.16066118, -0.33873063],\n",
+       "       [ 1.16355985,  0.64991203,  1.09220769, ..., -0.31435327,\n",
+       "        -0.86787277, -1.01055568],\n",
+       "       ...,\n",
+       "       [ 1.11431186,  0.45677916,  1.38705669, ...,  1.32310611,\n",
+       "         0.62384203,  2.05821888],\n",
+       "       [ 0.49726342,  0.90192687,  0.59938866, ...,  1.432698  ,\n",
+       "         0.67322529,  2.36385116],\n",
+       "       [-1.21309054, -0.42645042, -1.2025599 , ..., -0.87687278,\n",
+       "         0.18790711, -0.54531542]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.35821026,  1.45777268,  0.46038842, ...,  1.41704202,\n",
+       "         1.95548699,  0.86738493],\n",
+       "       [-0.49928428,  0.73941263, -0.48944655, ..., -0.46887783,\n",
+       "        -1.03986272,  0.41799227],\n",
+       "       [ 0.12645498, -1.92911834,  0.11836359, ...,  0.15986649,\n",
+       "         0.01762003, -0.19100836],\n",
+       "       ...,\n",
+       "       [ 1.2301895 , -0.11790888,  1.14275323, ...,  0.70782593,\n",
+       "         0.55743007, -0.79548111],\n",
+       "       [-0.76580285,  0.30604131, -0.58506187, ...,  2.27968674,\n",
+       "         6.40168261,  5.06926289],\n",
+       "       [ 0.95208316,  0.93725605,  0.82263147, ..., -0.46245888,\n",
+       "        -0.7265345 , -1.03489307]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_sc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Building"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The output is a categorical format so we will use supervised classification machine learning algorithms.\n",
+    "* To build the best model, we have to train and test the dataset with multiple Machine Learning algorithms then we can find the best ML model."
    ]
   },
   {
