feat: Add support vector classifier for model training

--- a/code.ipynb
+++ b/code.ipynb
@@ -1578,6 +1578,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Support Vector Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
