feat: Improve model performance with feature scaling and support vector classifier

--- a/code.ipynb
+++ b/code.ipynb
@@ -2557,10 +2557,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.956140350877193"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred_lr)"
+   ]
   },
   {
    "cell_type": "code",
