feat: Add K-Nearest Neighbor classifier for improved model performance

--- a/code.ipynb
+++ b/code.ipynb
@@ -26,7 +26,8 @@
     "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
     "\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
@@ -1684,7 +1685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression\n"
+    "## 2. Logistic Regression\n"
    ]
   },
   {
@@ -1811,7 +1812,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 3. K - Nearest Neighbor Classifier"
+   ]
   },
   {
    "cell_type": "code",
