feat: Import necessary libraries and tools for data manipulation, visualization, and model evaluation

--- a/code.ipynb
+++ b/code.ipynb
@@ -9,22 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing necessary libraries for data manipulation and visualization\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "# Importing dataset for the project\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "\n",
+    "# Importing tools for splitting data and preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
+    "# Importing metrics for evaluating model performance\n",
     "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
     "\n",
+    "# Importing machine learning models for classification\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier"
