`Implement code changes for improved model performance`

--- a/code.ipynb
+++ b/code.ipynb
@@ -1652,7 +1652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train with Standard scaler data\n"
+    "`Train with Standard scaler data`"
    ]
   },
   {
@@ -1754,7 +1754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train with Standard scaler data\n"
+    "`Train with Standard scaler data`"
    ]
   },
   {
@@ -1819,6 +1819,63 @@
    "metadata": {},
    "source": [
     "## 3. K - Nearest Neighbor Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 0., 0., 1., 0.,\n",
+       "       1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 0., 1., 0., 1.,\n",
+       "       1., 1., 1., 1., 0., 1., 0., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 0., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 0., 0., 0.,\n",
+       "       1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 0., 1., 1., 1., 1., 1., 0.,\n",
+       "       1., 1., 0., 0., 1., 0., 1., 0., 1., 0., 1., 0.])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_classifier = KNeighborsClassifier(n_neighbors=5, metric='minkowski', p=2)\n",
+    "knn_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_knn = knn_classifier.predict(X_test)\n",
+    "y_pred_knn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9385964912280702"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred_knn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Train with Standard scaler data`"
    ]
   },
   {
