`Implement code changes for improved model performance`

--- a/code.ipynb
+++ b/code.ipynb
@@ -1880,10 +1880,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 0., 0., 1., 0.,\n",
+       "       1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 0., 1., 0., 1.,\n",
+       "       1., 1., 1., 1., 0., 0., 0., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 0., 1., 0., 1., 1., 1., 1., 0., 1., 0., 0., 0., 1., 0., 0., 0.,\n",
+       "       1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 0., 1., 1., 1., 1., 1., 0.,\n",
+       "       1., 1., 0., 0., 1., 0., 1., 1., 1., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_classifier2 = KNeighborsClassifier(\n",
+    "    n_neighbors=5,\n",
+    "    metric='minkowski',\n",
+    "    p=2\n",
+    ")\n",
+    "knn_classifier2.fit(X_train_sc, y_train)\n",
+    "\n",
+    "y_pred_knn = knn_classifier2.predict(X_test_sc)\n",
+    "y_pred_knn"
+   ]
   }
  ],
  "metadata": {
