`Implement code changes for improved model performance`

--- a/code.ipynb
+++ b/code.ipynb
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1895,7 @@
        "       1., 1., 0., 0., 1., 0., 1., 1., 1., 0., 0., 0.])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,9 +1908,36 @@
     ")\n",
     "knn_classifier2.fit(X_train_sc, y_train)\n",
     "\n",
-    "y_pred_knn = knn_classifier2.predict(X_test_sc)\n",
-    "y_pred_knn"
+    "y_pred_knn_sc = knn_classifier2.predict(X_test_sc)\n",
+    "y_pred_knn_sc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9649122807017544"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred_knn_sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
