`Implement Naive Bayes Classifier for improved model performance`

--- a/code.ipynb
+++ b/code.ipynb
@@ -1933,6 +1933,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Naive Bayes Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
