--- a/code.ipynb
+++ b/code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,16 +928,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1da8df95550>"
+       "<seaborn.axisgrid.PairGrid at 0x153651ad010>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "<Axes: xlabel='target', ylabel='count'>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1012,19 +1012,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Makara\\AppData\\Local\\Temp\\ipykernel_1232\\1340022044.py:11: FutureWarning: \n",
+      "C:\\Users\\Makara\\AppData\\Local\\Temp\\ipykernel_7648\\1340022044.py:11: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  ax = sns.countplot(data=cancer_df, x=\"mean radius\", palette=palette)\n",
-      "C:\\Users\\Makara\\AppData\\Local\\Temp\\ipykernel_1232\\1340022044.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Makara\\AppData\\Local\\Temp\\ipykernel_7648\\1340022044.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(ax.get_xticklabels(), rotation=90, ha=\"right\", fontsize=8)\n"
      ]
     },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1156,14 +1156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Makara\\AppData\\Local\\Temp\\ipykernel_1232\\3673946921.py:2: FutureWarning: \n",
+      "C:\\Users\\Makara\\AppData\\Local\\Temp\\ipykernel_7648\\3673946921.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
        "Name: target, dtype: float64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1537,7 @@
        "         0.18790711, -0.54531542]])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
        "        -0.7265345 , -1.03489307]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
        "       1., 1., 0., 0., 1., 0., 1., 0., 1., 0., 1., 0.])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1640,7 @@
        "0.9385964912280702"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1678,7 @@
        "0.9649122807017544"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1719,7 @@
        "       1., 1., 0., 0., 0., 0., 1., 0., 1., 0., 1., 0.])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
        "0.9649122807017544"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1783,7 @@
        "       1., 1., 0., 1., 1., 0., 0., 1., 0., 0., 0., 1.])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
        "0.6052631578947368"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1839,7 @@
        "       1., 1., 0., 0., 1., 0., 1., 0., 1., 0., 1., 0.])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
        "0.9385964912280702"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1896,7 @@
        "       1., 1., 0., 0., 1., 0., 1., 1., 1., 0., 0., 0.])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1915,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
        "0.9649122807017544"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,6 +1938,113 @@
    "metadata": {},
    "source": [
     "## 4. Naive Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 0.,\n",
+       "       1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 0., 0., 1., 0.,\n",
+       "       1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 0., 1., 0., 1.,\n",
+       "       1., 1., 1., 1., 0., 0., 0., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 0., 1., 0., 1., 1., 1., 1., 0., 1., 0., 0., 0., 1., 0., 0., 0.,\n",
+       "       1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 0., 1., 1., 1., 1., 1., 0.,\n",
+       "       1., 1., 0., 0., 1., 0., 1., 1., 1., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_classifier = GaussianNB()\n",
+    "nb_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_nb = nb_classifier.predict(X_test)\n",
+    "y_pred_nb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9473684210526315"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred_nb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Train with standard scaled data`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 0.,\n",
+       "       1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 0., 0., 0., 1., 0.,\n",
+       "       1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 0., 1., 0., 1.,\n",
+       "       1., 1., 1., 1., 0., 0., 0., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 0., 1., 0., 1., 1., 1., 1., 0., 1., 0., 0., 0., 1., 0., 0., 0.,\n",
+       "       1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 0., 1., 1., 1., 1., 1., 0.,\n",
+       "       1., 1., 0., 0., 1., 0., 1., 1., 1., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_classifier2 = GaussianNB()\n",
+    "nb_classifier2.fit(X_train_sc, y_train)\n",
+    "\n",
+    "y_pred_nb_sc = nb_classifier2.predict(X_test_sc)\n",
+    "y_pred_nb_sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9385964912280702"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred_nb_sc)"
    ]
   },
   {
