Implement Decision Tree Classifier for improved model performance

--- a/code.ipynb
+++ b/code.ipynb
@@ -13,27 +13,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing necessary libraries for data manipulation and visualization\n",
+    "# INecessary libraries for data manipulation and visualization\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Importing dataset for the project\n",
+    "# Dataset for the project\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "\n",
-    "# Importing tools for splitting data and preprocessing\n",
+    "# Tools for splitting data and preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Importing metrics for evaluating model performance\n",
+    "# Metrics for evaluating model performance\n",
     "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
     "\n",
-    "# Importing machine learning models for classification\n",
+    "# Machine learning models for classification\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB"
+    "from sklearn.naive_bayes import GaussianNB\n"
    ]
   },
   {
@@ -2045,6 +2045,13 @@
    ],
    "source": [
     "accuracy_score(y_test, y_pred_nb_sc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Decision Tree Classifier"
    ]
   },
   {
