--- a/code.ipynb
+++ b/code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,8 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n"
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
@@ -1653,7 +1654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Train with Standard scaler data`"
+    "`Train with Standard scaler data`\n"
    ]
   },
   {
@@ -1725,7 +1726,7 @@
     }
    ],
    "source": [
-    "lr_classifier = LogisticRegression(random_state=51, penalty='l1', solver='liblinear')\n",
+    "lr_classifier = LogisticRegression(random_state=51, penalty=\"l1\", solver=\"liblinear\")\n",
     "lr_classifier.fit(X_train, y_train)\n",
     "y_pred_lr = lr_classifier.predict(X_test)\n",
     "y_pred_lr"
@@ -1755,7 +1756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Train with Standard scaler data`"
+    "`Train with Standard scaler data`\n"
    ]
   },
   {
@@ -1789,7 +1790,7 @@
     }
    ],
    "source": [
-    "lr_classifier2 = LogisticRegression(random_state=51, penalty='l1', solver='liblinear')\n",
+    "lr_classifier2 = LogisticRegression(random_state=51, penalty=\"l1\", solver=\"liblinear\")\n",
     "lr_classifier2.fit(X_train_sc, y_train)\n",
     "y_pred_lr_sc = lr_classifier.predict(X_test_sc)\n",
     "y_pred_lr_sc"
@@ -1819,7 +1820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. K - Nearest Neighbor Classifier"
+    "## 3. K - Nearest Neighbor Classifier\n"
    ]
   },
   {
@@ -1845,7 +1846,7 @@
     }
    ],
    "source": [
-    "knn_classifier = KNeighborsClassifier(n_neighbors=5, metric='minkowski', p=2)\n",
+    "knn_classifier = KNeighborsClassifier(n_neighbors=5, metric=\"minkowski\", p=2)\n",
     "knn_classifier.fit(X_train, y_train)\n",
     "\n",
     "y_pred_knn = knn_classifier.predict(X_test)\n",
@@ -1876,7 +1877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Train with Standard scaler data`"
+    "`Train with Standard scaler data`\n"
    ]
   },
   {
@@ -1902,11 +1903,7 @@
     }
    ],
    "source": [
-    "knn_classifier2 = KNeighborsClassifier(\n",
-    "    n_neighbors=5,\n",
-    "    metric='minkowski',\n",
-    "    p=2\n",
-    ")\n",
+    "knn_classifier2 = KNeighborsClassifier(n_neighbors=5, metric=\"minkowski\", p=2)\n",
     "knn_classifier2.fit(X_train_sc, y_train)\n",
     "\n",
     "y_pred_knn_sc = knn_classifier2.predict(X_test_sc)\n",
@@ -1937,7 +1934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Naive Bayes Classifier"
+    "## 4. Naive Bayes Classifier\n"
    ]
   },
   {
@@ -1994,7 +1991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Train with standard scaled data`"
+    "`Train with standard scaled data`\n"
    ]
   },
   {
@@ -2051,7 +2048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Decision Tree Classifier"
+    "## 5. Decision Tree Classifier\n"
    ]
   },
   {
@@ -2059,7 +2056,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dt_classifier = DecisionTreeClassifier(c)"
+   ]
   }
  ],
  "metadata": {
