`Implement XGBoost Classifier for improved model performance`

--- a/code.ipynb
+++ b/code.ipynb
@@ -2493,6 +2493,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Based on the accuracy results of each classification algorithms XGBoost Classifier is the best classifier for this scenario`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
