Implement cross-validation for XGBoost model

--- a/code.ipynb
+++ b/code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "from xgboost import XGBClassifier\n",
     "\n",
     "# RandomizedSearchCV for hyperparameter tuning to optimize model performance\n",
-    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV, cross_val_score"
    ]
   },
   {
@@ -3698,6 +3698,90 @@
    ],
    "source": [
     "print(classification_report(y_test, y_pred_xgb_pt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross-Validation of the ML Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:54] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:54] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:54] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:54] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:54] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:54] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:54] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:55] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:55] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "C:\\Users\\Makara\\AppData\\Roaming\\Python\\Python311\\site-packages\\xgboost\\core.py:158: UserWarning: [14:58:55] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-06abd128ca6c1688d-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation of XGBoost Model =  [0.97826087 0.97826087 0.97826087 1.         0.91304348 0.95555556\n",
+      " 1.         1.         0.97777778 0.91111111]\n",
+      "Cross Validation of XGBoost Model (in mean) =  0.9692270531400966\n"
+     ]
+    }
+   ],
+   "source": [
+    "cross_validation = cross_val_score(\n",
+    "    estimator=xgb_classifier_pt, X=X_train_sc, y=y_train, cv=10\n",
+    ")\n",
+    "\n",
+    "print(\"Cross Validation of XGBoost Model = \", cross_validation)\n",
+    "print(\"Cross Validation of XGBoost Model (in mean) = \", cross_validation.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean accuracy value of cross-validation is `96.92%` and XGBoost model accuracy is `98.24%`. It showing XGBoost is slightly overfitted but when training data will more it will generalized model."
    ]
   },
   {
